@@ -4,6 +4,7 @@ junit_tests(name='scala',
     '3rdparty:junit',
     '3rdparty:mockito-all',
     '3rdparty:netty',
+    '3rdparty:scalatest',
     'finagle/finagle-core',
     'finagle/finagle-kestrelx',
     'finagle/finagle-memcachedx',
