@@ -1,11 +1,12 @@
 scala_library(name='scala',
   provides = scala_artifact(
     org = 'com.twitter',
-    name = 'util-logging',
+    name = 'util-test',
     repo = artifactory,
   ),
   dependencies=[
-    'util/util-app/src/main/scala',
+    '3rdparty:scalatest',
+    'util/util-logging/src/main/scala',
     'util/util-core/src/main/scala',
   ],
   sources=rglobs('*.scala'),
